--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 keywords = ["snmp", "async", "tokio"]
 
 [dependencies]
+derivative = { version = "2.2" }
 from-to-repr = { version = "0.1" }
 simple_asn1 = { version = "0.6" }
 tokio = { version = "1.20", features = ["net", "time"] }
