--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ keywords = ["snmp", "async", "tokio"]
 
 [dependencies]
 derivative = { version = "2.2" }
+der-parser = { version = "8.2" }
 from-to-repr = { version = "0.1" }
-simple_asn1 = { version = "0.6" }
+nom = { version = "7.1" }
 tokio = { version = "1.20", features = ["net", "time"] }
 tracing = { version = "0.1", optional = true }
 
