--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ from-to-repr = { version = "0.1" }
 simple_asn1 = { version = "0.6" }
 tokio = { version = "1.20", features = ["net", "time"] }
 tracing = { version = "0.1", optional = true }
+
+[dev-dependencies]
+dhat = { version = "0.3" }
+tokio = { version = "1.20", features = ["full"] }
