--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ tracing = { version = "0.1", optional = true }
 [dev-dependencies]
 dhat = { version = "0.3" }
 tokio = { version = "1.20", features = ["full"] }
+tracing-subscriber = { version = "0.3" }
