--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "csnmp"
 version = "0.6.0"
 edition = "2021"
+rust-version = "1.67"
 license = "CC0-1.0"
 description = "Community-based async (Tokio) SNMP client library"
 repository = "https://github.com/RavuAlHemio/csnmp"
